--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,12 @@ environment:
   sdk: '>=3.0.1 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
+  go_router: ^8.0.1
+  http: ^1.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
